# hackai

./: .env.example  .gitignore  12.json.example  README.md  check_sdk_docs.py  debug_response.py  debug_twelve_labs_response.json  main.py  pyproject.toml  test_analyze_method.py  test_api_key.py  test_comprehensive_analysis.py  test_correct_api.py  test_sdk_methods.py
routes/: cache.py
services/affiliate_discovery/: discovery_engine.py  groq_client.py  link_generator.py  models.py  overrides.py  routes.py
services/groq_passthrough/: __init__.py  routes.py
services/revenue_playbook/: __init__.py  generator.py  models.py  routes.py
services/video_analyzer/: README.md  __init__.py  analyzer.py  api_client.py  models.py  resolver.py  routes.py
services/video_monetization/: __init__.py  analyzer.py  models.py  prompts.py  routes.py
services/youtube_scraper/: content_analyzer.py  health_calculator.py  models.py  resolver.py  routes.py  scraper.py  video_analyzer.py  youtube_api.py
utils/: simple_cache.py
